--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -4,13 +4,19 @@
 	<div class="row">
 		
 	<label>text_ru</label>	
-	<textarea> <%= @card.text_ru %> </textarea>
+	<textarea> <%= card.text_ru %> </textarea>
 	
 	<label>test_en</label>	
-	<textarea> <%= @card.text_en %> </textarea>
+	<textarea> <%= card.text_en %> </textarea>
 	
 	<label>review_date</label>		
-	<label> <%= @card.review_date %> <label>
+	<label> <%= card.review_date %> <label>
+		
+	<%= link_to "edit", edit_card_path(card),
+                         class:"btn btn-success" %>	
 	
+	<%= link_to "delete", card, method: :delete,
+                                  data: { confirm: "You sure?" } ,
+                         class:"btn btn-danger" %>
     </div>
 </div>
