--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,18 +1,32 @@
 <% provide(:title, 'New') %>
 
-<div class="row">
-	<div class="container">
-    <%= form_for(@card, :html => {:class => 'row'}) do |f| %>
-      <%= f.label(:text_ru, :class=>  "col-md-3") %>
-      <%= f.text_area(:text_ru, :class=> "col-md-6") %>
+<div class="container-fluid">
+	<div class="panel panel-info">
+		<div class="panel-title">
+	    	<span>New Card</span>
+	    </div>		
+	 <div class="panel-body">    
+		
+    <%= form_for(@card, :html => {:class => ''}) do |f| %>
+   
+		  
+     <div class="form-group">
+      <%= f.label(:text_ru, :class=>  "label label-info") %>
+      <%= f.text_area(:text_ru, :class=> "form-control") %>
+      </div>
+       <div class="form-group">
+      <%= f.label( :text_en, :class=> "label label-info") %>
+      <%= f.text_area(:text_en, :class=> "form-control") %>
+      </div>
+       <div class="form-group">
+      <%= f.label(:review_date, :class=> "label label-info") %>
+      <br>
+      <%= f.date_select( :review_date, :class=> "form-control") %>
+      </div>
 
-      <%= f.label( :text_en, :class=> "col-md-3") %>
-      <%= f.text_area(:text_en, :class=> "col-md-6") %>
-
-      <%= f.label(:review_date, :class=> "col-md-3") %>
-      <%= f.date_select( :review_date, :class=> "col-md-6") %>
-
-      <%= f.submit "Create Card", class: "col-md-12 btn btn-primary " %>
+      <%= f.submit "Create Card", class: "btn btn-primary btn-block" %>
     <% end %>
+   
+    </div>
   </div>
 </div>
