--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,24 +1,34 @@
 <% provide(:title, 'Show') %>
 
-<div class="container">
-	<div class="row">
+<div class="container-fluid">
+	<div class="panel panel-info">
+		<div class="panel-title">
+	    	<span>New Card</span>
+	    </div>		
+	    <div class="panel-body">
+		  
+	<div class="form-group">	  
+	<label class="label label-info">text_ru</label>	
+	<textarea class="form-control" readonly> <%= @card.text_ru %> </textarea>
+	</div>
+	<div class="form-group">
+	<label class="label label-info">test_en</label>	
+	<textarea class="form-control" readonly> <%= @card.text_en %> </textarea>
+	</div>
+	<div class="form-group">
+	<label class="label label-info">review_date</label>		
+	<label class="form-control"> <%= @card.review_date %> <label>
+	</div>
+			<div class="btn-group btn-group-justified">
+			  
 		
-	<label>text_ru</label>	
-	<textarea> <%= @card.text_ru %> </textarea>
-	
-	<label>test_en</label>	
-	<textarea> <%= @card.text_en %> </textarea>
-	
-	<label>review_date</label>		
-	<label> <%= @card.review_date %> <label>
-	
-			
 	<%= link_to "edit", edit_card_path(@card),
                          class:"btn btn-success" %>	
 	
 	<%= link_to "delete", @card, method: :delete,
                                   data: { confirm: "You sure?" } ,
                          class:"btn btn-danger" %>
-	
-    </div>
+                         	</div>
+   </div>
+  </div>
 </div>
