--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -30,3 +30,10 @@
     </div>
   </div>
 </div>
+
+<div class="container-fluid">
+	<div class="panel">
+	  	  <%= link_to "Back", root_path,
+                         class:"btn btn-primary btn-block" %>	
+	</div>  
+</div>
