--- a/app/views/cards/_card.html.erb
+++ b/app/views/cards/_card.html.erb
@@ -1,5 +1,3 @@
-<% provide(:title, 'Show') %>
-
 
 <div class="container-fluid">
 	<div class="panel panel-info">
@@ -20,6 +18,9 @@
 	<label class="form-control"> <%= card.review_date %> <label>
 	</div>	
 		<div class="btn-group btn-group-justified">
+		<%= link_to "show", card_path(card),
+                         class:"btn btn-info" %>			
+			
 	<%= link_to "edit", edit_card_path(card),
                          class:"btn btn-success" %>	
 	
