--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href= root_path > <i class="glyphicon glyphicon-dashboard"></i> test_project</a>
+					<a class="navbar-brand" href= <%= root_path %> > 
+					<i class="glyphicon glyphicon-dashboard"></i> test_project</a>
 				</div>
 			</div><!-- /.container-fluid -->
 		</nav>
